--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -48,7 +48,7 @@ dependencies:
   flutter_local_notifications: ^11.0.0
   cloud_firestore: ^4.9.1
   flutter_datetime_picker: ^1.5.1
-  
+  timezone: ^0.9.2
 
 dev_dependencies:
   flutter_test:
